src/components/SectionFooter/index.module.scss
.footer {
  height: 10vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--color-secondary);
  position: relative;
  box-shadow: var(--box-shadow);
}

.background {
  color: var(--color-primary);
  position: absolute !important;
  top: calc(0px - var(--hero-offset));
  left: calc(0px - var(--hero-offset));
  right: calc(0px - var(--hero-offset));
  bottom: 0;
}

.content {
  text-align: left;
  color: var(--color-text);
  position: relative;
  width: 100%;
  margin: 0 4rem;
  display: flex;
  justify-content: space-between;
}

.footerText {
  background: var(--color-secondary);
  padding: 0.5rem;
  margin: 0;
  display: inline-block;
  font-weight: bold;
}

.top {
  text-decoration: none;
  color: var(--color-text);
}

